# Tetris

./: CMakeLists.txt
include/: platform.h
lib/block/: block.cpp  block.h
lib/game/: game.cpp  game.h
src/: main.cpp
